--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ document.getElementById("save-note").addEventListener("click", function() {
         },
         body: "content=" + encodeURIComponent(content),
     })
-    .then(response => response.text())
+    .then(response => response.json())
     .then(data => {
         document.getElementById("note-content").value = "";
         loadNotes(); // Reload notes
